app/assets/stylesheets/attractions.css.scss
// Place all the styles related to the attractions controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

/*
  Homepage logic
*/

.homeSplash{
	text-align: center;
	min-height: 80%;
	background: asset-url('MapW2.svg');
	background-color:  rgba(255,0,0,0.5);
	background-position: -200px -200px;
	background-size:200% auto;
	background-repeat: no-repeat;
	min-height: 100vh;
	transition: 1s ease all;
	-webkit-transition: 1s ease all;
	-moz-transition: 1s ease all;
	-ms-transition: 1s ease all;
	-o-transition: 1s ease all;
	padding: 40px 40px;
}
.homeSplash .homeContainer{
	width: 80%;
	max-width: 700px;
	margin: auto;
	background: rgba(255,255,255,0.95);
	padding: 40px 0;
}
.homeSplash h1{
	text-transform: uppercase;
	display: block;
	font-size: 20px;
	letter-spacing: 5px;
	margin:0;
	margin-top: 10px;
	line-height: 1.5;
	font-family:"Futura Book", sans-serif;
}
.homeSplash h4{
	font-weight: normal;
	display: block;
	line-height: 1;
	margin:0;
	margin-top: 90px;
}
.svgLogo{
	width: 600px;
	margin: auto;
	border-top:1px solid #000;
	border-bottom:1px solid #000;
}
.logo img{
	width: 160px;
}
.categoryIcons{
	margin-top: 150px;
}
.category{
	display: inline-block;
	margin: 0 40px;
}
.category svg{
	width:60px;
	fill:#000 !important;
	margin-bottom: 0;
}
.category svg path{
	fill:#000;
}

.category h6{
	margin:0;
	opacity: 0;
	text-transform: uppercase;
}
.homeSplash h4{
	position: relative;
	width: 240px;
	display: block;
	text-align: left;
	margin: auto;
	margin-top: 150px;
	font-family:"Futura Book", "Futura", sans-serif;
}
h4 b {
	position: relative;
	margin-left: 10px;
}
h4 span{
	position: relative;
}
h4 b:before{
	content:attr(data-first);
	position: absolute;
	top:-60px;
	color: #ccc;
}
h4 span:before{
	position: absolute;
	top:-30px;
	color: #777;
	content:attr(data-second);
}
h4 span:after{
	content:'Learn';
	position: absolute;
	top:30px;
	left: 0;
	color: #777;
	content:attr(data-fourth);
}
h4 b:after{
	content:'Explore';
	position: absolute;
	top:60px;
	left: 0;
	color: #ccc;
	content:attr(data-fifth);
}
.category svg path{
	transition:0.4s ease all !important;
	-webkit-transition:0.4s ease all !important;
}
.category h6{
	transition:0.4s ease all !important;
	-webkit-transition:0.4s ease all !important;
}

.Eat.sexy svg path{
	fill:#c85e1a;
}
.Eat.sexy h6{
	color:#c85e1a;
}

.Explore.sexy svg path{
	fill:#8ab0cf;
}
.Explore.sexy h6{
	color:#8ab0cf;
}

.Learn.sexy svg path{
	fill:#829b6a;
}
.Learn.sexy h6{
	color:#829b6a;
}

.Party.sexy svg path{
	fill:#621e74;
}
.Party.sexy h6{
	color:#621e74;
}

.Shop.sexy svg path{
	fill:#f18996;
}
.Shop.sexy h6{
	color:#f18996;
}

/*
	Attraction category logic
*/
.categoryPage h1{
	text-transform: uppercase;
	color: #fff;
	font-size: 42px;
	line-height: 1;
	padding: 0;
	margin: 0;
}
.title {
	text-align: center;
	padding: 80px;
}
.title h1 {
	font-family:"Futura Bold", "Futura", sans-serif;
}
.title img {
	width: 80px;
	margin-bottom: 0
}
.swatches {
	display: flex;
	justify-content:center;
}
.swatches div{
	width:25%;
	height:200px;
	color: #fff;
	box-sizing:border-box;
}
.swatches img{
	height:30px;
	position: relative;
	top:-1px;
	vertical-align: middle;
}
.swatches div .overlay {
	width: 100%;
	height: 100%;
	padding:10px;
	background: rgba(0,0,0,0);
	transition:0.3s ease all;
	-webkit-transition:0.3s ease all;
	-moz-transition:0.3s ease all;
	-ms-transition:0.3s ease all;
	cursor: pointer;
}
.swatches div .overlay:hover {
	background: rgba(0,0,0,0.5);
	text-decoration:none;
}
.swatches .overlay {
	text-align: center;
	.swatch-subtitle {
		font-family:"Futura Book", sans-serif;
		text-transform: lowercase;
	}
	.swatch-title {
		font-family:"Futura Bold", "Futura", sans-serif;
		text-transform: uppercase;
		font-weight:bold;
	}
}
.swatch {
	background-size: cover !important;
}
.swatch a:hover {
	text-decoration: none;
}
.swatches div h2{
	color: #fff;
}
.paragraph{
	padding: 60px 0px 40px 0;
}
.paragraph p {
	font-family:"Futura Book", "Futura", sans-serif;
	max-width: 800px;
	text-align: left;
	color: #fff;
	font-size: 16px;
	margin: auto;
}
.categoryIcons svg{
	width: 40px;
}
.categoryIcons .category{
	display: inline-block;
	margin: 0 40px;
}
.categoryIcons{
	padding-bottom: 40px;
}
.categoryIcons h6{
	display: none;
}

/*
  Attraction show logic
*/

section {
  min-height:75vh;
  min-width:100vw;
  display: flex !important;
  align-items: center;
  justify-content: center;
  margin:0;
	font-size:2vw;
}
section h3 {
	text-align: center;
	font-family:"Futura Bold", "Futura", sans-serif;
	text-transform: uppercase;
	font-weight:bold;
	margin: 1vw 0;
}
section p {
  text-align: center;
  overflow:visible;
}

section.logo-slide {
  min-height:50vh;
}

.attraction-info p {
	font-family:"Futura Book", "Futura", sans-serif;
}

section .floating-name {
  text-align: center;
  background-size: cover;
  background-repeat:no-repeat;
  height:100vh;
  width:100%;
  padding-top:9%;
  margin:0;
  color:white;
  font-family:"Futura Bold", "Futura", sans-serif;
  text-transform: uppercase;
  font-size:5vw;
  .subtitle {
    text-transform: none;
    font-style: italic;
    position:relative;
    top:-2vw;
    font-family:"Futura Book", sans-serif;
    font-size:2vw;
		a {
			color:white;
			text-decoration: underline;
			&:hover {
				text-decoration: none;
			}
		}
  }
  .tag-icon img {
    display:block;
    margin:auto;
    width:15%;
  }
}

